--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<link rel="stylesheet" href="css/reset.css" />
 		<script src="js/MSG.js"></script>
 		<script src="js/smooth_dragging.js"></script>
+		<script src="js/match3.js"></script>
 		<script>
       document.addEventListener("DOMContentLoaded", function() {
         document.removeEventListener("DOMContentLoaded", arguments.callee, false);
