--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 		<meta name="author" content="Scott Robert Lawrence" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link href='http://fonts.googleapis.com/css?family=Caesar+Dressing' rel='stylesheet' type='text/css'>
 
 		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
 		<link rel="shortcut icon" href="/favicon.ico" />
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 		<link rel="stylesheet" href="css/reset.css" />
+		
 		<script src="js/MSG.js"></script>
 		<script>
       document.addEventListener("DOMContentLoaded", function() {
